--- a/education.html
+++ b/education.html
@@ -8,10 +8,28 @@
 <body>
     <h2>EDUCATION<h2> <hr>
     <h4>Wright State University, Dayton, OH</h4>
-    <h5>Master of Science, Computer Science<h5><br><hr>
+    <h5>Master of Science, Computer Science<h5><hr>
     <h4>University of North Carolina at Chapel Hill, Chapel Hill, NC</h4>
-    <h5>B.S. Computer Science, Minors in Data Science and Studio Art</h5>
-   
+    <h5>B.S. Computer Science, Minors in Data Science and Studio Art</h5><hr>
+
+    <table>
+        <tr>
+            <th>Degree</th>
+            <th>Institution</th>
+            <th>Year</th>
+        </tr>
+        <tr>
+            <td>M.Sc</td>
+            <td>Wright State University</td>
+            <td>2025</td>
+        </tr>
+        <tr>
+            <td>B.Sc</td>
+            <td>University of North Carolina at Chapel Hill</td>
+            <td>2022</td>
+        </tr>
+    </table>
+   <br>
 <a href = "index.html">Back to Home</a>
 
 
