--- a/experiance.html
+++ b/experiance.html
@@ -6,13 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>20XX – PRESENT<h3>
-<h3>Human Resources Generalist | Lamna Healthcare Company | Chicago, Illinois</h3>
-<h4>Review, update, and revise company hiring practices, vacation, and other human resources policies to ensure compliance with OSHA and all local, state, and federal labor regulations. By creating and maintaining a positive and responsive work environment, we raised employee retention rates by over 10% to achieve a greater than 90% employee retention over a 2-year period. Developed recruitment programs to successfully increase minority recruitment and meet affirmative action requirements. Led development team to build and deploy a dedicated recruitment website which reduced year-over-year recruitment costs by 14%.</h4>
-<br>
-<h3>JUNE 20XX – AUGUST 20XX</h3>
-<h3>Human Resources Intern | Wholeness Healthcare | Boomtown, Ohio</h3>
-<h4>Assisted in recruitment outreach to prospective employees. Organized and conducted several seminars for hospital employees to educate and update them regarding available employment benefit options. Arranged hospital-wide guest speakers symposia to educate management about new employment laws and workplace confidence and morale building techniques. Administrative tasks.</h4>
-<a href = "index.html">Back to Home</a>
+    <h3>20XX – PRESENT</h3>
+    <h3>Human Resources Generalist | Lamna Healthcare Company | Chicago, Illinois</h3>
+    <h4>
+        Review, update, and revise company hiring practices, vacation, and other human resources policies to ensure compliance with OSHA and all local, state, and federal labor regulations. 
+        By creating and maintaining a positive and responsive work environment, we raised employee retention rates by over 10% to achieve a greater than 90% employee retention over a 2-year period. 
+        Developed recruitment programs to successfully increase minority recruitment and meet affirmative action requirements. 
+        Led development team to build and deploy a dedicated recruitment website which reduced year-over-year recruitment costs by 14%.
+    </h4>
+    <br>
+    <h3>JUNE 20XX – AUGUST 20XX</h3>
+    <h3>Human Resources Intern | Wholeness Healthcare | Boomtown, Ohio</h3>
+    <h4>
+        Assisted in recruitment outreach to prospective employees. 
+        Organized and conducted several seminars for hospital employees to educate and update them regarding available employment benefit options. 
+        Arranged hospital-wide guest speakers symposia to educate management about new employment laws and workplace confidence and morale building techniques. 
+        Administrative tasks.
+    </h4>
+
+    <h2>Skills</h2>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>PHP</li>
+        <li>GitHub</li>
+        <li>VS Code</li>
+        <li>JavaScript</li>
+    </ol>
+
+    <a href="index.html">Back to Home</a>
 </body>
 </html>
