--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
        <a href="contact.html" class="button">Contact</a>
 
     </p>  
+    <div>
+    <image src="wwo.webp" alt="Samp._Female" width="200" height="200"></image>
+    <h4>Interests</h4>
+    <ul>
+        <li>Internet Surfing</li>
+        <li>Hiking </li>
+        <li>Kitchen Gardening</li>
+        <li>Cooking</li>
+        </ul>
+    </div>
 </body>
 </html>
