--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>COMPUTER SCIENCE PROJECTS</h2>
+    <h2>COMPUTER SCIENCE PROJECTS</h2> 
     <hr>
-    <h3>Human Activity Recognition using Convolutional Neural</h3>
-<h4>• Employed an improved <mark>Convolutional Neural Network (ConvNet/CNN) with VGG network layers</mark> to successfully classify
-the image.<h4><br>
-<h3>Password Strength Evaluator</h3>
-<h4>• Trained and classified dataset with <mark>support vector machines (SVMs)</mark> to determine the strength of the password entered.</h4><br>
-<h3>Faculty Feedback System<h3>
-<h4>• Built <mark>front-end, server-side logic, including a database system</mark>, that allows students to give feedback anonymously to their
-respective tutors.<h4>
-    <a href = "index.html">Back to Home</a>
+    <a href="https://github.com/SuyesSapkota/frontsamp">
+        <h3>Human Activity Recognition using Convolutional Neural</h3>
+    </a>
+    <h4>• Employed an improved <mark>Convolutional Neural Network (ConvNet/CNN) with VGG network layers</mark> to successfully classify
+    the image.</h4><br>
 
+    <a href="https://github.com/SuyesSapkota/assignment2">
+        <h3>Password Strength Evaluator</h3>
+    </a>
+    <h4>• Trained and classified dataset with <mark>support vector machines (SVMs)</mark> to determine the strength of the password entered.</h4><br>
+
+    <a href="https://github.com/SuyesSapkota/github-intro">
+        <h3>Faculty Feedback System</h3>
+    </a>
+    <h4>• Built <mark>front-end, server-side logic, including a database system</mark>, that allows students to give feedback anonymously to their
+    respective tutors.</h4><br>
+    
+
+    <a href="index.html">Back to Home</a>
 </body>
 </html>
