--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <strong>Human Resources Generalist with 6+ years of experience assisting with and fulfilling organization staffing needs and requirements. A proven track record of using my excellent personal, communication and organization skills to lead and improve HR departments, recruit excellent personnel, and improve department efficiencies. Team player with excellent communication skills, high quality of work, driven and highly self-motivated. Strong negotiating skills and business acumen and able to work independently.</strong>
        <br>
        <br>
-       <a href="contact.html" class="button">Contact</a>
+       <button>Contact</button>
 
     </p>  
     <div>
