--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projectst</title>
 </head>
 <body>
     <h2>COMPUTER SCIENCE PROJECTS</h2> 
@@ -24,7 +24,7 @@
     </a>
     <h4>• Built <mark>front-end, server-side logic, including a database system</mark>, that allows students to give feedback anonymously to their
     respective tutors.</h4><br>
-    
+
 
     <a href="index.html">Back to Home</a>
 </body>
